syntax = "proto3";

import "google/protobuf/empty.proto";

option go_package = "github.com/sweetloveinyourheart/exploding-kittens/proto/code/gameserver/go;grpc";

package com.sweetloveinyourheart.kittens.games;

service GameServer {
    rpc PlayCards(PlayCardsRequest) returns (google.protobuf.Empty);
}

message PlayCardsRequest {
    string game_id = 1;
    string user_id = 2;
    repeated string card_ids = 3;
}
